@@ -15,6 +15,7 @@ Overview of changes in lightdm 0.9.8
     * Automatically respond to PAM messages without prompts
     * Create 'AddLocalXSeat' D-Bus method, and require root to use 'AddSeat'
     * Fix multi-seat configuration picking the same display number
+    * Use correct D-Bus and power interface in liblightdm-qt
 
 Overview of changes in lightdm 0.9.7
 
